--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+
+<ul class="nav navbar-nav">
+      <li><%= link_to 'Home', root_path, class: 'navbar-brand' %></li>
+      <li><%= link_to 'About', page_path('about') %></li>
+      <li><%= link_to 'Cards', cards_path %></li>
+
+
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
