--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -20,5 +20,9 @@
   <%= @card.description %>
 </p>
 
+<p>
+  <%= image_tag @card.image.url(:medium) %>
+</p>
+
 <%= link_to 'Edit', edit_card_path(@card) %> |
 <%= link_to 'Back', cards_path %>
