--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -27,6 +27,12 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+  <div class="field form-group">
+    <%= f.label :image %><br>
+    <%= f.file_field :image %>
+  </div>
+
+    Add file upload
   <div class="actions">
     <%= f.submit %>
   </div>
