fixed modals in storefront

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -4,6 +4,8 @@
     <ul class="dropdown-menu">
       <li><%= link_to "Senders",  senders_path %></li>
       <li><%= link_to "Recipients", recipients_path %></li>
+      <li><%= link_to 'Cards', cards_path %></li>
+
     </ul>
 </li>
 
