--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,8 +11,11 @@
 
 <ul class="nav navbar-nav">
       <li><%= link_to 'Home', root_path, class: 'navbar-brand' %></li>
+
+
+
+      <li><%= link_to "Store", storefront_index_path %></li>
       <li><%= link_to 'About', page_path('about') %></li>
-      <li><%= link_to 'Cards', cards_path %></li>
 
 
     </div>
