--- a/app/views/storefront/index.html.erb
+++ b/app/views/storefront/index.html.erb
@@ -14,28 +14,27 @@
           <h4><%= card.style %></h4>
         </div>
       </div>
-    </div>
-  <% end %>
 
-<!-- Modal -->
-  <!-- TODO: fix this modal error with card.id -->
-    <div class="modal fade" id="myModal_<%= card.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel"><%= card.style %></h4>
-          </div>
-          <div class="modal-body">
-            <p><%= number_to_currency card.price %></p>
-            <p><%= card.description %></p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+  </div> <!-- col-md-4 -->
+      <!-- Modal -->
+      <div class="modal fade" id="myModal_<%= card.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel"><%= card.style %></h4>
+            </div>
+            <div class="modal-body">
+              <p><%= number_to_currency card.price %></p>
+              <p><%= card.description %></p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
           </div>
         </div>
-      </div>
-    </div> <!-- modal -->
+      </div> <!-- modal -->
+    <% end %>
 
-</div>
+  </div>
+
