--- a/app/views/storefront/index.html.erb
+++ b/app/views/storefront/index.html.erb
@@ -29,6 +29,7 @@
               <p><%= card.description %></p>
             </div>
             <div class="modal-footer">
+              <%= button_to 'Add to Cart', line_items_path(card_id: card), class: "btn btn-success btn-sm" %>
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
           </div>
