--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -24,5 +24,7 @@
 <h3>Order Subtotal:  <%= number_to_currency @cart.subtotal %></h3>
 
 <%= link_to "Continue Shopping", storefront_index_path, class: "btn btn-success btn-sm" %>
+<%= link_to "Checkout", new_order_path, class: "btn btn-info btn-sm" %>
+
 
 <%= button_to "Empty Cart", @cart, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger btn-sm", form: {style: 'display:inline-block;'} %>
