--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,41 +1,25 @@
 <%= form_for(@order) do |f| %>
-  <% if @order.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
 
-      <ul>
-      <% @order.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= current_user.sender.last_name %>
 
-  <div class="field">
-    <%= f.label :sender_id %><br>
-    <%= f.text_field :sender_id %>
-  </div>
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :street %><br>
-    <%= f.text_field :street %>
-  </div>
-  <div class="field">
+    <%= f.text_area :street, class: "form-control", placeholder: "100 St. Charles Ave" %>
+  <div class="field form-group">
     <%= f.label :city %><br>
-    <%= f.text_field :city %>
-  </div>
-  <div class="field">
+    <%= f.text_area :city, class: "form-control", placeholder: "New Orleans, LA 70115" %>
+  <div class="field form-group">
     <%= f.label :state %><br>
-    <%= f.text_field :state %>
-  </div>
-  <div class="field">
+    <%= f.text_area :state, class: "form-control", placeholder: "LA" %>
+  <div class="field form-group">
     <%= f.label :zip %><br>
-    <%= f.text_field :zip %>
+    <%= f.text_area :zip, class: "form-control", placeholder: "70115" %>
   </div>
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :pay_type %><br>
-    <%= f.text_field :pay_type %>
+    <%= f.select :pay_type, Order::PAYMENT_TYPES, {prompt: "Select a payment method"}, {class: "form-control"} %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Place Order", class: "btn btn-success" %>
   </div>
 <% end %>
