--- a/app/views/senders/index.html.erb
+++ b/app/views/senders/index.html.erb
@@ -1,19 +1,11 @@
-<p id="notice"><%= notice %></p>
+<h1>Senders</h1>
 
-<h1>Listing Senders</h1>
-
-<table>
+<table class="table table-stripe table-hover">
   <thead>
     <tr>
       <th>First name</th>
       <th>Last name</th>
       <th>Email</th>
-      <th>Dob</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Zip</th>
-      <th>Phone</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,12 +16,6 @@
         <td><%= sender.first_name %></td>
         <td><%= sender.last_name %></td>
         <td><%= sender.email %></td>
-        <td><%= sender.dob %></td>
-        <td><%= sender.address %></td>
-        <td><%= sender.city %></td>
-        <td><%= sender.state %></td>
-        <td><%= sender.zip %></td>
-        <td><%= sender.phone %></td>
         <td><%= link_to 'Show', sender %></td>
         <td><%= link_to 'Edit', edit_sender_path(sender) %></td>
         <td><%= link_to 'Destroy', sender, method: :delete, data: { confirm: 'Are you sure?' } %></td>
