--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<div class="container">
 <h1>Listing Cards</h1>
 
 
@@ -30,3 +31,5 @@
 <br>
 
 <%= link_to 'New Card', new_card_path %>
+
+</div>
