--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,22 +8,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-
-<ul class="nav navbar-nav">
-      <li><%= link_to 'Home', root_path, class: 'navbar-brand' %></li>
-
-
-
-      <li><%= link_to "Store", storefront_index_path %></li>
-      <li><%= link_to 'About', page_path('about') %></li>
-
-
+      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
     </div>
+
     <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav">
         <%= render 'layouts/navigation_links' %>
       </ul>
     </div>
   </div>
 </nav>
+
 
