--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,10 @@
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Forget Me Note" %>">
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= csrf_meta_tags %>
+
+    <link href="http://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Average" rel="stylesheet" type="text/css">
+
   </head>
   <body>
     <header>
