--- a/app/views/storefront/index.html.erb
+++ b/app/views/storefront/index.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h1>Our Cards</h1>
 <p>Select a card to set up autosending!</p>
 
@@ -14,8 +16,10 @@
           <h4><%= card.style %></h4>
         </div>
       </div>
-
   </div> <!-- col-md-4 -->
+
+
+
       <!-- Modal -->
       <div class="modal fade" id="myModal_<%= card.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -38,4 +42,4 @@
     <% end %>
 
   </div>
-
+</div>
