--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -40,7 +40,7 @@
                     <p class="lead">Quickly import contacts from your digital address book or email a custom link asking friends for their mailing info!</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="assets/images/ipad.png" alt="">
+                    <%= image_tag("ipad.png", class: "img-responsive") %>
                 </div>
             </div>
 
@@ -62,7 +62,7 @@
                     <p class="lead">Support local artists while sending unique, print quality cards to those you love most.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="dog.png" alt="">
+                    <%= image_tag("dog.png", class: "img-responsive") %>
                 </div>
             </div>
 
@@ -84,7 +84,7 @@
                     <p class="lead">Plan ahead or schdule last minute.  With Forget Me Note, you can place the order when its on your mind.  Eliminate the chace of forgetting!</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="app/assets/images/phones.png" alt="">
+                    <%= image_tag("phones.png", class: "img-responsive") %>
                 </div>
             </div>
 
@@ -108,7 +108,7 @@
             <div class="row">
 
 
-                <div class="col-lg-12">
+                <div class="col-lg-12 text-center">
                     <ul class="list-inline intro-social-buttons">
                             <li>
                                 <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg btn-custom"><span class="network-name">Our cards</span></a>
