--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,6 +1,23 @@
 <div class="container">
 
 
+<div class="container">
+    <div class="row">
+        <div class="col-lg-5 col-sm-6">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading"><%= @card.style %></h2>
+            <p class="lead">Quickly import contacts from your digital address book or email a custom link asking friends for their mailing info!</p>
+        </div>
+        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+            <%= image_tag("ipad.png", class: "img-responsive") %>
+        </div>
+    </div>
+</div>
+
+
+
+
 <p>
   <strong>Style:</strong>
   <%= @card.style %>
