--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,27 +1,3 @@
-<div class="container">
-
-<h1>Our Cards</h1>
-<p>Select a card to set up autosending!</p>
-
-<div class="row">
-  <% @cards.each do |card| %>
-    <div class="col-md-4">
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <%= link_to card_path(card.id) do %>
-            <%= image_tag card.image.url(:medium), class: "img-responsive" %>
-          <% end %>
-          <p><strong><%= number_to_currency card.price %></strong></p>
-          <h4><%= card.style %></h4>
-        </div>
-      </div>
-    </div> <!-- col-md-4 -->
-  <% end %>
-
-  </div>
-</div>
-
-
  <footer>
         <div class="container">
             <div class="row">
@@ -36,10 +12,14 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
+                            <a href="#services">Services</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
                             <a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Forget Me Note 2015. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
                 </div>
             </div>
         </div>
