--- a/app/views/senders/index.html.erb
+++ b/app/views/senders/index.html.erb
@@ -1,29 +1,55 @@
-<h1>Senders</h1>
+<div class="container">
+  <h1>Senders</h1>
 
-<table class="table table-stripe table-hover">
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @senders.each do |sender| %>
+  <table class="table table-stripe table-hover">
+    <thead>
       <tr>
-        <td><%= sender.first_name %></td>
-        <td><%= sender.last_name %></td>
-        <td><%= sender.email %></td>
-        <td><%= link_to 'Show', sender %></td>
-        <td><%= link_to 'Edit', edit_sender_path(sender) %></td>
-        <td><%= link_to 'Destroy', sender, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>First name</th>
+        <th>Last name</th>
+        <th>Email</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @senders.each do |sender| %>
+        <tr>
+          <td><%= sender.first_name %></td>
+          <td><%= sender.last_name %></td>
+          <td><%= sender.email %></td>
+          <td><%= link_to 'Show', sender %></td>
+          <td><%= link_to 'Edit', edit_sender_path(sender) %></td>
+          <td><%= link_to 'Destroy', sender, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Sender', new_sender_path %>
+  <br>
+
+  <%= link_to 'New Sender', new_sender_path %>
+</div>
+
+<footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="list-inline">
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#about">About</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                    <p class="copyright text-muted small">Copyright &copy; Forget Me Note 2015. All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
