Modified line item views and removed database yml from git ignore

--- a/app/views/line_items/new.html.erb
+++ b/app/views/line_items/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Line Item</h1>
+<div class="container">
+  <div class="col-lg-5 col-lg-offset-2 col-sm-6">
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', line_items_path %>
+    <%= link_to 'Back', line_items_path, class: "btn btn-success" %>
+  </div>
+</div>
