--- a/app/views/line_items/_form.html.erb
+++ b/app/views/line_items/_form.html.erb
@@ -1,41 +1,46 @@
-<%= form_for(@line_item) do |f| %>
-  <% if @line_item.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@line_item.errors.count, "error") %> prohibited this line_item from being saved:</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-5 col-sm-6">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading"><%= @card.style %></h2>
+            <p class="lead"><%= @card.description %></p>
+            <p class="lead">$ <%= @card.price %></p><br>
+            <p>When would you like this card to arrive?</p>
 
-      <ul>
-      <% @line_item.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :card_id %><br>
-    <%= f.text_field :card_id %>
-  </div>
-  <div class="field">
-    <%= f.label :cart_id %><br>
-    <%= f.text_field :cart_id %>
-  </div>
-  <div class="field">
-    <%= f.label :quantity %><br>
-    <%= f.number_field :quantity %>
-  </div>
-  <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
-  </div>
-  <div class="field">
-    <%= f.label :recipient_id %><br>
-    <%= f.text_field :recipient_id %>
-  </div>
-  <div class="field">
-    <%= f.label :message %><br>
-    <%= f.text_area :message %>
-  </div>
+            <%= simple_form_for(@line_item, :card_id => @card.id) do |f| %>
+              <% if @line_item.errors.any? %>
+                <div id="error_explanation">
+                   <h2><%= pluralize(@line_item.errors.count, "error") %> prohibited this line_item from being saved:</h2>
+
+                    <ul>
+                      <% @line_item.errors.full_messages.each do |message| %>
+                        <li><%= message %></li>
+                      <% end %>
+                    </ul>
+                </div>
+                <% end %>
+
+
+
+    <%= f.hidden_field :card_id, :value => @card.id %>
+    <%= f.input :recipient_id %>
+    <%= f.input :message %>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
+
+
+        </div>
+        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+            <br>
+            <%= image_tag @card.image.url(:medium) %>
+        </div>
+    </div>
+</div>
+
+
+
